# nscertkeycreate

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  test.key
.github/: copilot-instructions.md
.github/agents/: molloy.agent.md
certctl/: __init__.py  __main__.py  cli.py  console.py  filelock.py  secretstore.py  term.py
certctl/ca/: __init__.py  adcs.py  base.py  sectigo.py  selfsigned.py
certctl/modules/: __init__.py  legacy_bridge.py  lock.py  locking.py  report.py
certctl/scripts/: __init__.py  console_cert_store_probe.py  console_upload_diagnose.py  console_upload_probe.py  csr_create.py  csr_submit.py  (+8 more)
docs/: ARCHITECTURE.md  DEVELOPMENT.md  USAGE.md  adcs.json.example
legacy/: nscertkeycreate.py
nscert/: cli.py  keygen.py
reports/: console_poll.csv  console_poll.json  expiry_report.json  managed_devices.json
scripts/: certctl  certctl.py  certctl_poll_expiry.py
tests/: test_adcs_adapter.py  test_cli_allow_wildcard_colored.py  test_cli_allow_wildcard_warning.py  test_cli_csr.py  test_cli_csr_from_cert.py  test_cli_help_wildcard.py  test_cli_keygen.py  test_csr.py  test_csr_create_wildcard_cli.py  test_csr_from_cert.py  test_csr_interactive.py  test_csr_submit.py  test_csr_submit_routing.py  test_docs_wildcard.py  test_keygen.py  test_keygen_csr_scripts.py  test_keygen_keychain.py  test_keygen_save_to_keychain.py  test_no_direct_stderr.py  test_nsconsole_certpoll.py  test_nsconsole_certpoll_all.py  test_nsconsole_deploy.py  test_nsconsole_deploy_listadc.py  test_nsctl_wrapper.py  test_packaging_entry.py  test_san_validation.py  test_storage.py  test_term_levels.py  test_term_module.py  test_utils_extract_pem.py  test_utils_warning.py
(+13431 files in other folders)
