[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nscertkeycreate"
version = "0.1.0"
description = "Netscaler certificate/key tooling"
readme = "README.md"
authors = [ { name = "Michael Molloy" } ]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = []

# Installable console script that exposes `nsctl` entry point
scripts = { nsctl = "nscert.cli:main" }

[tool.setuptools]
packages = { find = {} }
