[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "certctl"
version = "0.1.0"
description = "Certificate automation helpers for NetScaler Console / ADC"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Michael Molloy"}]
dependencies = [
  "requests>=2.31",
]

[project.scripts]
certctl-new = "certctl.scripts.keycsr_console:main"

[tool.setuptools]
packages = ["certctl"]

[tool.pytest.ini_options]
addopts = "-q"
